# WebGPU-Demo

./: CMakeLists.txt  LICENSE  README.md  WebGPU-Demo.geany  build_em.bat  build_mingw64.bat  build_ninja.bat  configure_em.bat  configure_mingw64.bat  copy_data.bat  debug.bat  run.bat  run_ninja.bat
data/maps/: map1.txt
data/shaders/: basic2d.wgsl  basic2d_color.wgsl  basic3d.wgsl  basic3d_color.wgsl  basic3d_uniform.wgsl  triangle2d.wgsl
include/: actor.hpp  app.hpp  camera.hpp  input.hpp  mesh.hpp  window.hpp  world.hpp
include/ecs/: component.hpp
include/env/: gpuenv.hpp
include/error/: callback.hpp  myassert.hpp
include/graphics/: attach.hpp  bind.hpp  buffer.hpp  callback.hpp  desc.hpp  face.hpp  inspect.hpp  instance.hpp  mesh.hpp  pipeline.hpp  request.hpp  sampler.hpp  shader.hpp  texture.hpp  view.hpp
include/loaders/: obj_loader.hpp  texture_loader.hpp
include/managers/: mesh_manager.hpp  shader_manager.hpp  texture_manager.hpp
include/structs/: attach.hpp  attrib.hpp  bounding_box.hpp  color.hpp  config.hpp  desc.hpp  layout.hpp  state.hpp  vertex.hpp
include/util/: freader.hpp  mymath.h  obj_loader.hpp  string_utils.hpp
pch/: stdafx.cpp  stdafx.h
src/: actor.cpp  app.cpp  camera.cpp  input.cpp  main.cpp  mesh.cpp  window.cpp  world.cpp
src/ecs/: component.cpp
src/env/: gpuenv.cpp
src/error/: callback.cpp
src/graphics/: attach.cpp  bind.cpp  buffer.cpp  callback.cpp  config.cpp  desc.cpp  inspect.cpp  instance.cpp  mesh.cpp  pipeline.cpp  request.cpp  sampler.cpp  shader.cpp  texture.cpp  view.cpp
src/loaders/: obj_loader.cpp  texture_loader.cpp
src/managers/: mesh_manager.cpp  shader_manager.cpp  texture_manager.cpp
src/structs/: attach.cpp  attrib.cpp  config.cpp  desc.cpp  layout.cpp  state.cpp
src/util/: freader.cpp  obj_loader.cpp
